WIP: added file for timezone viewer component

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,4 @@
-<participant-bar participants="participants"></participant-bar>
+<div class="view1-container">
+  <participant-bar participants="participants"></participant-bar>
+  <timezone-viewer participants="participants"></timezone-viewer>
+</div>
