--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="components/participantBar.css"
+  <link rel="stylesheet" href="components/participantBar.css">
+  <link rel="stylesheet" href="view1/view1.css">
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -37,6 +38,7 @@
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="components/participantBar.js"></script>
+  <script src="components/timezoneViewer.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
