--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="components/participantBar.css">
+  <link rel="stylesheet" href="component/timezoneViewer.css">
   <link rel="stylesheet" href="view1/view1.css">
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
