--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="components/participantBar.css">
-  <link rel="stylesheet" href="component/timezoneViewer.css">
+  <link rel="stylesheet" href="components/timezoneViewer.css">
   <link rel="stylesheet" href="view1/view1.css">
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -29,21 +29,9 @@
   <![endif]-->
 
   <div ng-view></div>
-
-  <div>AngularJS seed app: v<span app-version></span></div>
-
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular-route/angular-route.js"></script>
-  <script src="app.js"></script>
-  <script src="components/participantBar.js"></script>
-  <script src="components/timezoneViewer.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
