--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="components/participantBar.css">
-  <link rel="stylesheet" href="components/timezoneViewer.css">
-  <link rel="stylesheet" href="view1/view1.css">
+  <link rel="stylesheet" href="dist/style.css">
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
